# MIMXRT1050-EVK

./: .gitignore  CMakeLists.txt  README.md  StratifyLocalSettings.json  StratifySettings.json  imxrt.cfg  sl_settings.json
boot/: boot_config.c
src/: CMakeLists.txt  SystemClock_Config.c  board_config.c  board_symbols.c  config.h  devfs_config.c  fsl_flexspi_nor_boot.c  fsl_flexspi_nor_flash.c  fsl_flexspi_nor_flash.h  kernel_request.c  link_config.c  link_config_uart.c  mcu_config.c  ram_device.c  ram_device.h  ramdisk.c  ramdisk.h  sl_config.h  sos_config.c
